--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run cov:send
-    - run: npm test
+    - run: yarn install --frozen-lockfile
+    - run: yarn run build --if-present
+    - run: yarn run cov:send
+    - run: yarn test
