chore: Yarn related fix

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn install --frozen-lockfile
-    - run: yarn run build --if-present
+    - run: yarn run build
     - run: yarn run cov:send
     - run: yarn test
