--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
     - run: yarn install --frozen-lockfile
     - run: yarn run build
-    - run: yarn run cov:send
+    - run: yarn add codecov nyc && yarn run cov:send
     - run: yarn test
